--- a/03_Second_Stage/03_1_inla_restantes.Rmd
+++ b/03_Second_Stage/03_1_inla_restantes.Rmd
@@ -70,7 +70,7 @@ list_excess_m_1.n.1.0<-c(
                               f(week,model="rw2")                 +
                               f(inla.group(prcp),model="rw1")     +
                               f(inla.group(temp),model="rw1")     +
-                              f(inla.group(nodos),model="rw2")    +
+                             # f(inla.group(nodos),model="rw2")    +
                               f(id.sp,model="bym",graph=W.peru)   +
                               pr_pov_2018                         +
                               pr_edu_inf_25                       +
@@ -84,10 +84,10 @@ names(list_excess_m_1.n.1.0)<-list_excess_m_1.n.1.0
 tic()
 test_excess_1.n.1.m<-list_excess_m_1.n.1.0 %>% 
                              purrr::map(~inla.batch.predict.bru.safe(formula = .,
-                                                             dat1 = db.men.post_2020))
+                                                             dat1 = db.men.post_2021)) # men women
 toc()
 
 
-saveRDS(test_excess_1.n.1.m,"test_excess_1_n_1_0_excess_m_2021.rds")
+saveRDS(test_excess_1.n.1.m,"test_excess_1_n_1_0_excess_m_2021.rds") #m for men / wm for women
 ```
 
