pca_full_database

--- a/03_Second_Stage/Principal component Analysis/03_01_process_by_pca.Rmd
+++ b/03_Second_Stage/Principal component Analysis/03_01_process_by_pca.Rmd
@@ -339,7 +339,16 @@ saveRDS(social.dets.pca, file.path(output, "social.dets_pca.rds"))
 
 ```
 
-`
+
+# Check database
+
+```{r,message=F,warning=F}
+
+social.dets<-readRDS("./02_output")
+
+
+```
+
 
 
 
