--- a/03_Second_Stage/Principal component Analysis/03_01_process_by_pca.Rmd
+++ b/03_Second_Stage/Principal component Analysis/03_01_process_by_pca.Rmd
@@ -343,8 +343,13 @@ saveRDS(social.dets.pca, file.path(output, "social.dets_pca.rds"))
 # Check database
 
 ```{r,message=F,warning=F}
-
-social.dets<-readRDS("./02_output")
+library(tidyverse)
+social.dets   <- readRDS("./02_output/social_dets_pca.rds")                               %>% 
+                 select(dynamic.population.dim,economic.dim,house.characteristics.dim,
+                        health.performance.dim,health.status.dim)                         %>% 
+                 mutate(edu.dim       = as.vector(social.dets$education_dimension),
+                        demo.dim      = as.vector(social.dets$demographic_dimension)
+                        )
 
 
 ```
